--- a/angular-src/package.json
+++ b/angular-src/package.json
@@ -5,10 +5,10 @@
   "angular-cli": {},
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
     "test": "ng test",
     "pree2e": "webdriver-manager update --standalone false --gecko false",
-    "e2e": "protractor"
+    "e2e": "protractor",
+    "heroku-postbuild": "ng build --aot -prod"
   },
   "private": true,
   "dependencies": {
