--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node app",
-    "heroku-postbuild": "cd angular-src && npm install && ng serve"
+    "heroku-postbuild": "cd angular-src && npm install"
   },
   "dependencies": {
     "express": "4.15.3",
