--- a/angular-src/package.json
+++ b/angular-src/package.json
@@ -8,7 +8,8 @@
     "test": "ng test",
     "pree2e": "webdriver-manager update --standalone false --gecko false",
     "e2e": "protractor",
-    "heroku-postbuild": "ng build --aot -prod"
+    "build": "ng build --aot -prod",
+    "start": "ng serve"
   },
   "private": true,
   "dependencies": {
