--- a/angular-src/package.json
+++ b/angular-src/package.json
@@ -8,7 +8,8 @@
     "test": "ng test",
     "pree2e": "webdriver-manager update --standalone false --gecko false",
     "e2e": "protractor",
-    "start": "ng serve"
+    "start": "ng serve",
+    "postinstall": "ng build --aot --target=production"
   },
   "private": true,
   "dependencies": {
@@ -27,6 +28,7 @@
     "core-js": "^2.4.1",
     "rxjs": "^5.0.1",
     "ts-helpers": "^1.1.1",
+    "typescript": "~2.0.3",
     "zone.js": "^0.7.2"
   },
   "devDependencies": {
@@ -43,6 +45,5 @@
     "protractor": "~4.0.13",
     "ts-node": "1.2.1",
     "tslint": "^4.3.0",
-    "typescript": "~2.0.3"
   }
 }
