--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node app",
-    "heroku-postbuild": "cd angular-src && npm install && npm run start"
+    "start": "node app.js",
+    "heroku-postbuild": "cd angular-src && npm install"
   },
   "dependencies": {
     "express": "4.15.3",
